--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@fontsource/inter": "^4.5.15",
+    "@fontsource/poppins": "^4.5.10",
     "next": "13.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
